fix: positioning of the search button for small-collapsed view

--- a/src/components/ControlBar/ViewControlBar/styles/Filter.module.css
+++ b/src/components/ControlBar/ViewControlBar/styles/Filter.module.css
@@ -110,6 +110,7 @@
 
     .collapsed .searchButton {
         display: inline;
+        padding-top: 8px;
     }
 
     .collapsed .searchIconLarge {
